RESOLVED FIXED315137
Occasional debug assert in `-_requestTextExtraction:completionHandler:`
https://bugs.webkit.org/show_bug.cgi?id=315137
Summary Occasional debug assert in `-_requestTextExtraction:completionHandler:`
Wenson Hsieh
Reported 2026-05-19 16:13:39 PDT
Attachments
Wenson Hsieh
Comment 1 2026-05-19 16:17:48 PDT
EWS
Comment 2 2026-05-19 19:38:29 PDT
Committed 313538@main (4adbd1941411): <https://commits.webkit.org/313538@main> Reviewed commits have been landed. Closing PR #65233 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.