Tools/TestWebKitAPI/Tests/WebKit/WKWebView/TextExtractionTests.mm
@@ -72,6 +72,12 @@ SOFT_LINK_CLASS(SafariSafeBrowsing, SSBLookupContext);
 
 #endif
 
+@class WKTextExtractionItem;
+
+@interface WKWebView (TextExtractionTestsSPI)
+- (void)_requestTextExtraction:(_WKTextExtractionConfiguration *)configuration completionHandler:(void(^)(WKTextExtractionItem *))completionHandler;
+@end
+
 @interface WKWebView (TextExtractionTests)
 - (NSString *)synchronouslyGetDebugText:(_WKTextExtractionConfiguration *)configuration;
 - (_WKTextExtractionResult *)synchronouslyExtractDebugTextResult:(_WKTextExtractionConfiguration *)configuration;
@@ -1737,10 +1743,30 @@ TEST(TextExtractionTests, InteractedElementBounds)
     }
 }
 
+TEST(TextExtractionTests, RequestTextExtractionInSVGDocument)
+{
+    RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
+    [[configuration preferences] _setTextExtractionEnabled:YES];
+
+    RetainPtr webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 800, 600) configuration:configuration]);
+    RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Ctext%20x%3D%2210%22%20y%3D%2220%22%3EHello%3C%2Ftext%3E%3C%2Fsvg%3E"]];
+    [webView synchronouslyLoadRequest:request];
+
+    __block bool done = false;
+    __block RetainPtr<WKTextExtractionItem> resultItem;
+    [webView _requestTextExtraction:nil completionHandler:^(WKTextExtractionItem *item) {
+        resultItem = item;
+        done = true;
+    }];
+    Util::run(&done);
+
+    EXPECT_NULL(resultItem);
+}
+
 #if PLATFORM(MAC)
+
 TEST(TextExtractionTests, KeyPressInsertsCharactersInOrder)
 {
-    // Regression test for https://bugs.webkit.org/show_bug.cgi?id=315027.
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
     [[configuration preferences] _setTextExtractionEnabled:YES];
 
@@ -1757,6 +1783,7 @@ TEST(TextExtractionTests, KeyPressInsertsCharactersInOrder)
 
     EXPECT_WK_STREQ("abc", [webView stringByEvaluatingJavaScript:@"document.getElementById('q').value"]);
 }
+
 #endif // PLATFORM(MAC)
 
 } // namespace TestWebKitAPI
